<resources>
    <string name="app_name">My Application</string>
    <string name="search">Search</string>
    <string name="question">¿Cuántos quiere?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="request">Agregar producto al pedido</string>
    <string name="finalize">Finalizar venta</string>
    <string name="print">Imprimir ticket</string>
    <string name="total">Total : </string>
    <string name="cambio">Cambio</string>
    <string name="pago">Pago : </string>
    <string name="calcular">Calcular</string>
    <string name="vuelto">Vuelto : </string>
    <string name="ticket">Ticket de Compra</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="costo">Costo</string>
    <string name="empty"> </string>
</resources>