<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketActivity">

    <TextView
        android:id="@+id/lblTicketTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/lblTicketProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTicketTitle"
        android:layout_toStartOf="@+id/lblTicketTitle"
        android:text="@string/product"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/lblTicketQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTicketTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/quantity"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/lblTicketCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTicketTitle"
        android:layout_toEndOf="@+id/lblTicketTitle"
        android:layout_marginStart="20dp"
        android:text="@string/product"
        android:textSize="20sp"/>

</RelativeLayout>